# recordcollection

./: .flake8  .gitignore  discogs.json  notes.txt  pyproject.toml  tsconfig.json  webpack.config.ts
src/: manage.py
src/discogs/: dataclasses.py  functions.py  request.py
src/discogs/management/commands/: discogsimport.py  sync_discogs.py
src/lastfm/: apps.py  dataclasses.py  functions.py
src/lastfm/management/commands/: getlastfmtoptracks.py
src/localfiles/: apps.py  functions.py
src/localfiles/management/commands/: localimport.py  sync_local.py
src/musicbrainz/: apps.py  dataclasses.py  functions.py  request.py
src/musicbrainz/management/commands/: importmusicbrainzgenres.py  sync_musicbrainz.py
src/recordcollection/: abstract_classes.py  admin.py  admin_filters.py  asgi.py  models.py  settings.py  urls.py  utils.py  wsgi.py
src/recordcollection/management/commands/: download.py  matchfile.py
src/recordcollection/migrations/: 0001_initial.py  0002_alter_album_options_alter_artist_options_and_more.py  0002_remove_artist_unique_artist_name_and_more.py  0003_alter_track_title.py  0004_alter_album_title_alter_artist_name_and_more.py  0005_alter_artist_name_alter_track_file_path.py  0006_alter_album_title_alter_album_year_and_more.py  0007_track_play_count.py
src/recordcollection/static/: admin.css
src/spotify/: abstract_classes.py  dataclasses.py  functions.py  models.py  request.py
src/spotify/management/commands/: get_spotify_availability.py  get_spotify_uri.py  (+3 more)
src/spotify/migrations/: 0001_initial.py
src/youtube/: clients.py  dataclasses.py
